blue/os_compat/rt_thread/bindings.rs

#[doc = " Single List structure"]
pub type rt_slist_t = rt_slist_node;
pub type TimeoutFn = ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>;
#[doc = "< The object is not used."]
pub const rt_object_class_type_RT_Object_Class_Null: rt_object_class_type = 0;
#[doc = "< The object is a process."]
pub const rt_object_class_type_RT_Object_Class_Process: rt_object_class_type = 1;
#[doc = "< The object is a thread."]
pub const rt_object_class_type_RT_Object_Class_Thread: rt_object_class_type = 2;
#[doc = "< The object is a semaphore."]
pub const rt_object_class_type_RT_Object_Class_Semaphore: rt_object_class_type = 3;
#[doc = "< The object is a mutex."]
pub const rt_object_class_type_RT_Object_Class_Mutex: rt_object_class_type = 4;
#[doc = "< The object is a event."]
pub const rt_object_class_type_RT_Object_Class_Event: rt_object_class_type = 5;
#[doc = "< The object is a mail box."]
pub const rt_object_class_type_RT_Object_Class_MailBox: rt_object_class_type = 6;
#[doc = "< The object is a message queue."]
pub const rt_object_class_type_RT_Object_Class_MessageQueue: rt_object_class_type = 7;
#[doc = "< The object is a device."]
pub const rt_object_class_type_RT_Object_Class_Device: rt_object_class_type = 8;
#[doc = "< The object is a timer."]
pub const rt_object_class_type_RT_Object_Class_Timer: rt_object_class_type = 9;
#[doc = "< The object is a memory."]
pub const rt_object_class_type_RT_Object_Class_Memory: rt_object_class_type = 10;
#[doc = "< The object is a custom object"]
pub const rt_object_class_type_RT_Object_Class_Custom: rt_object_class_type = 11;
#[doc = "< The object is unknown."]
pub const rt_object_class_type_RT_Object_Class_Unknown: rt_object_class_type = 12;
pub type rt_object_class_type = core::ffi::c_uint;
pub type rt_spinlock_t = rt_base_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_spinlock {
    pub lock: rt_spinlock_t,
}
#[test]
fn bindgen_test_layout_rt_spinlock() {
    const UNINIT: ::core::mem::MaybeUninit<rt_spinlock> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_spinlock>(),
        4usize,
        concat!("Size of: ", stringify!(rt_spinlock))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_spinlock>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_spinlock))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).lock) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_spinlock),
            "::",
            stringify!(lock)
        )
    );
}
pub const ObjectClassType_ObjectClassUninit: ObjectClassType = 0;
pub const ObjectClassType_ObjectClassProcess: ObjectClassType = 1;
pub const ObjectClassType_ObjectClassThread: ObjectClassType = 2;
pub const ObjectClassType_ObjectClassSemaphore: ObjectClassType = 3;
pub const ObjectClassType_ObjectClassMutex: ObjectClassType = 4;
pub const ObjectClassType_ObjectClassEvent: ObjectClassType = 5;
pub const ObjectClassType_ObjectClassMailBox: ObjectClassType = 6;
pub const ObjectClassType_ObjectClassMessageQueue: ObjectClassType = 7;
pub const ObjectClassType_ObjectClassMemHeap: ObjectClassType = 8;
pub const ObjectClassType_ObjectClassMemPool: ObjectClassType = 9;
pub const ObjectClassType_ObjectClassDevice: ObjectClassType = 10;
pub const ObjectClassType_ObjectClassTimer: ObjectClassType = 11;
pub const ObjectClassType_ObjectClassMemory: ObjectClassType = 12;
pub const ObjectClassType_ObjectClassUnknown: ObjectClassType = 13;
pub type ObjectClassType = rt_uint8_t;
#[doc = " Base kernel Object"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_object {
    #[doc = " TODO: change type to String\n name of kernel object"]
    pub name: [rt_int8_t; 8usize],
    #[doc = " type of kernel object"]
    pub type_: rt_uint8_t,
    #[doc = " list node of kernel object"]
    pub list: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_object() {
    const UNINIT: ::core::mem::MaybeUninit<rt_object> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_object>(),
        20usize,
        concat!("Size of: ", stringify!(rt_object))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_object>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_object))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).list) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(list)
        )
    );
}
#[doc = " Base structure of IPC object"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_ipc_object {
    #[doc = " Inherit from KObjectBase"]
    pub parent: rt_object,
    #[doc = " IPC flag to use"]
    pub flag: core::ffi::c_uchar,
    #[doc = " Spin lock IPCObject used"]
    pub spinlock: rt_spinlock,
    #[doc = " Threads pended on this IPC object"]
    pub wait_list: rt_list_t,
    #[doc = " IRQ lock saved"]
    pub irq_saved: rt_int32_t,
}
#[test]
fn bindgen_test_layout_rt_ipc_object() {
    const UNINIT: ::core::mem::MaybeUninit<rt_ipc_object> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_ipc_object>(),
        40usize,
        concat!("Size of: ", stringify!(rt_ipc_object))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_ipc_object>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_ipc_object))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_ipc_object),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flag) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_ipc_object),
            "::",
            stringify!(flag)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).spinlock) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_ipc_object),
            "::",
            stringify!(spinlock)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).wait_list) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_ipc_object),
            "::",
            stringify!(wait_list)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).irq_saved) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_ipc_object),
            "::",
            stringify!(irq_saved)
        )
    );
}
#[doc = " Event flag raw structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_event {
    #[doc = " Inherit from IPCObject"]
    pub parent: rt_ipc_object,
    #[doc = " Event flog set value"]
    pub set: rt_uint32_t,
}
#[test]
fn bindgen_test_layout_rt_event() {
    const UNINIT: ::core::mem::MaybeUninit<rt_event> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_event>(),
        44usize,
        concat!("Size of: ", stringify!(rt_event))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_event>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_event))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_event),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).set) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_event),
            "::",
            stringify!(set)
        )
    );
}
#[doc = " The timer structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_timer {
    pub parent: rt_object,
    pub timeout_func: TimeoutFn,
    pub parameter: *mut core::ffi::c_void,
    pub init_tick: rt_uint32_t,
    pub timeout_tick: rt_uint32_t,
    pub flag: rt_uint8_t,
    pub node: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_timer() {
    const UNINIT: ::core::mem::MaybeUninit<rt_timer> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_timer>(),
        48usize,
        concat!("Size of: ", stringify!(rt_timer))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_timer>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_timer))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).timeout_func) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(timeout_func)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parameter) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(parameter)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).init_tick) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(init_tick)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).timeout_tick) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(timeout_tick)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flag) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(flag)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).node) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(node)
        )
    );
}
#[doc = " Stack management structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_stack {
    #[doc = " Current stack pointer"]
    pub sp: *mut rt_size_t,
    #[doc = " Pointer to the lowest address of the stack"]
    pub bottom: *mut rt_uint8_t,
    #[doc = " Stack size"]
    pub size: rt_size_t,
}
